<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Register_user"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/Register_image"
            android:layout_width="411dp"
            android:layout_height="288dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/background_img" />

        <EditText
            android:id="@+id/User_password"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_loginpage"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_emailAddress"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/User_ConfirmPassword"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_password"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/User_Name"
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_ConfirmPassword"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/User_emailAddress"
            android:layout_width="match_parent"
            android:hint="@string/User_Email"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Register_image"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/User_phone"
            android:layout_width="match_parent"
            android:hint="@string/phone_no"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_Name"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/Register_button"
            android:layout_width="190dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/register_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/User_phone"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
