<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="143dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/sign_in_login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:hint="@string/User_Email"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.021"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/password_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_loginpage"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_user"
        app:layout_constraintVertical_bias="0.037"
        tools:layout_editor_absoluteX="3dp" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_user"
        app:layout_constraintVertical_bias="0.074" />
</androidx.constraintlayout.widget.ConstraintLayout>